--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+       <nav> 
+          <div class="logo">
+            <img src="images/logo.png" alt="illustration">
+          </div>
+          <div class="links">
+            <a href="#top">Home</a>
+            <a href="">About</a>
+            <a href="">Plants</a>
+            <a href="">Contact</a>
+          </div>
+       </nav>
+    </header> 
+    <section class="top">
+        <h1>The Watering Can</h1>
+        <button>Shop</button>
+    </section>
+    <section class="about">
+        <div class="txt">
+            <h2>Our Story</h2>
+            
+        </div>
+    </section>
 </body>
 </html>
